...
              appBar: AppBar(
                centerTitle: true,
                title: Row(
                  mainAxisAlignment: MainAxisAlignment.center,
                  children: [
                    Text(
                      profileController.user['name'],
                      style: const TextStyle(color: Colors.black, fontSize: 15),
                    ),
                    widget.uid == authController.user.uid &&
                            !widget.isFromMethod
                        ? InkWell(
                            onTap: (() {
...
                        onTap: () {
                          Get.back();
                        },
                      ),
                actions: [
                  InkWell(
                    // key: Key('setting'),
                    onTap: () {
                      widget.uid == authController.user.uid
                          ? Get.to(() => SettingScreen(
                                controller: profileController,
                              ))
                          : {print('route' + Get.currentRoute)};
...
                // buttons -> edit profile, insta links, bookmark

                Row(
                  mainAxisAlignment: MainAxisAlignment.center,
                  children: [
                    InkWell(
                      key: Key('Edit-btn'),
                      child: Container(
                        padding: const EdgeInsets.symmetric(
                            vertical: 15, horizontal: 40),
                        decoration: BoxDecoration(
                            color: widget.uid == authController.user.uid
                                ? Colors.white
...
