...
    return Scaffold(
      backgroundColor: Color.fromARGB(255, 248, 244, 244),
      appBar: AppBar(
        backgroundColor: Colors.transparent,
        elevation: 0,
        leading: IconButton(
          key: Key('setting-back'),
          onPressed: () {
            Navigator.of(context).pop();
          },
          icon: Icon(
            Icons.arrow_back,
            color: Colors.black,
...
            Container(
              decoration: BoxDecoration(
                  borderRadius: BorderRadius.circular(6), color: Colors.white),
              child: Column(
                children: [
                  InkWell(
                    key: Key('change-pass-btn'),
                    onTap: () {
                      Get.to(() => ChangePasswordScreen());
                    },
                    child: OptionRow(
                      title: "Change password",
                      profileController: widget.controller,
...
